Fixed bug with z-index

--- a/client/src/pages/bodyStyle.css
+++ b/client/src/pages/bodyStyle.css
@@ -1,5 +1,5 @@
-body {
+/* body {
   zoom: 0.7;
   -moz-transform: scale(3);
   -moz-transform-origin: 0 0;
-}
+} */
